--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ html, body {
     font-size: 16px;
 }
 
+.inactive {
+    filter: grayscale(1);
+    opacity: 0.3;
+}
+
 #reset-btn {
     height: 40px;
     width: 100px;
