--- a/style.css
+++ b/style.css
@@ -30,11 +30,33 @@ html, body {
 }
 
 .btn {
+    position: relative;
     background-color: #3063ec;
     text-align: center;
     color: #ffffff;
     font-family: 'Roboto';
     font-size: 16px;
+    cursor: pointer;
+}
+
+.bonus {
+    display: inline-block;
+    vertical-align: middle;
+    height: 40px;
+    width: 40px;
+    border-radius: 20px;
+    margin-right: 5px;
+    box-sizing: border-box;
+    border: 2px solid #e2e2e2;
+    background-color: #ffffff;
+    font-size: 14px;
+    color: #e2e2e2;
+    transition: 0.1s ease-out;
+}
+
+.bonus:hover {
+    border: 2px solid #3063ec;
+    width: 100px;
 }
 
 .inactive {
@@ -42,15 +64,61 @@ html, body {
     opacity: 0.3;
 }
 
+.info-bubble {
+    position: absolute;
+    bottom: -4px;
+    right: -4px;
+    width: 16px;
+    height: 15px;
+    background-color: #2956cf;
+    border-radius: 8px;
+    font-size: 10px;
+    padding-top: 1px;
+    text-align: center;
+    display: none;
+}
+
+#buttons-container {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+#random-icon {
+    height: 24px;
+    width: 24px;
+    background-size: cover;
+    background-image: url('assets/general/random_inactive.png');
+    margin-left: 6px;
+    margin-top: 6px;
+}
+
+#random-text {
+    position: absolute;
+    width: calc(100% - 15px);
+    left: 0;
+    top: 0;
+    text-align: right;
+    padding-right: 15px;
+    padding-top: 10px;
+}
+
+#random-btn:hover #random-text::after {
+    content: "shuffle";
+    color: #3063ec;
+}
+
+#random-btn:hover #random-icon {
+    background-image: url('assets/general/random.png');
+}
+
 #reset-btn {
+    display: inline-block;
     height: 40px;
     width: 100px;
     border-radius: 20px;
     font-weight: 500;
     box-sizing: border-box;
-    position: absolute;
-    right: 10px;
-    bottom: 10px;
 }
 
 #reset-icon {
@@ -74,7 +142,6 @@ html, body {
     border: 2px solid #3063ec;
     color: #3063ec;
     background-color: #ffffff;
-    cursor: pointer;
 }
 
 #reset-btn:hover #reset-btn-content {
