--- a/style.css
+++ b/style.css
@@ -52,10 +52,15 @@ html, body {
     font-size: 14px;
     color: #e2e2e2;
     transition: 0.1s ease-out;
+    cursor: default;
 }
 
-.bonus:hover {
+.bonus-active {
     border: 2px solid #3063ec;
+    cursor: pointer;
+}
+
+.bonus-active:hover {
     width: 100px;
 }
 
@@ -103,12 +108,12 @@ html, body {
     padding-top: 10px;
 }
 
-#random-btn:hover #random-text::after {
+#random-btn:hover.bonus-active #random-text::after {
     content: "shuffle";
     color: #3063ec;
 }
 
-#random-btn:hover #random-icon {
+.bonus-active #random-icon {
     background-image: url('assets/general/random.png');
 }
 
@@ -200,7 +205,6 @@ html, body {
     margin: 0 auto;
     margin-top: -10px;
     transition: 0.1s ease-out;
-    cursor: pointer;
 }
 
 #end-box .btn:hover {
