--- a/style.css
+++ b/style.css
@@ -69,6 +69,11 @@ html, body {
     opacity: 0.3;
 }
 
+.close {
+    background-color: #FE4A49;
+    border: none;
+}
+
 .info-bubble {
     position: absolute;
     bottom: -4px;
@@ -81,6 +86,10 @@ html, body {
     padding-top: 1px;
     text-align: center;
     display: none;
+}
+
+.bonus-active .info-bubble {
+    display: block;
 }
 
 #buttons-container {
@@ -143,6 +152,10 @@ html, body {
     margin-top: 10px;
 }
 
+#reset-btn-content::after {
+    content: "reset";
+}
+
 #reset-btn:hover {
     border: 2px solid #3063ec;
     color: #3063ec;
@@ -157,6 +170,24 @@ html, body {
     background-image: url('assets/general/reset-blue.png');
 }
 
+.close #reset-btn-content::after {
+    content: "close";
+}
+
+#reset-btn.close:hover {
+    border: 2px solid #e24040;
+    color: #ffffff;
+    background-color: #e24040;
+}
+
+#reset-btn.close #reset-icon {
+    background-image: url('assets/general/close.png');
+}
+
+#reset-btn.close:hover #reset-icon {
+    background-image: url('assets/general/close.png');
+}
+
 #render_canvas {
     width: 400px;
     height: 550px;
@@ -164,7 +195,29 @@ html, body {
     border-radius: 8px;
 }
 
-#end {
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes zoom-in {
+    from {
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(0.9);
+    }
+
+    to {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+    }
+}
+
+#dialog {
     display: none;
     position: absolute;
     height: 400px;
@@ -173,42 +226,64 @@ html, body {
     bottom: 150px;
     background-color: rgba(23,23,23,0.5);
     backdrop-filter: blur(4px);
+    animation: fade-in 0.5s;
 }
 
-#end-box {
-    height: fit-content;
-    width: fit-content;
-    position: absolute;
+.dialog-box {
+    position: relative;
+    display: none;
+    opacity: 0;
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+    animation: zoom-in 0.5s forwards;
+    animation-delay: 0.25s;
 }
 
-#end-box h2 {
+.dialog-box h3 {
     position: relative;
     text-align: center;
-    top: 0;
-    left: 0;
+    font-family: 'Roboto';
     font-size: 32px;
     font-weight: 500;
-    width: 300px;
     height: 30px;
     color: #ffffff;
+    margin-top: 0;
 }
 
-#end-box .btn {
+.dialog-box .btn {
     height: 30px;
     width: 120px;
     border-radius: 20px;
     padding-top: 10px;
-    display: block;
     margin: 0 auto;
-    margin-top: -10px;
+    display: block;
     transition: 0.1s ease-out;
+    margin-top: -10px;
 }
 
-#end-box .btn:hover {
+.cancel {
+    background-color: #ffffff;
+    color: #333333;
+}
+
+.cancel:hover {
+    background-color: #e2e2e2 !important;
+}
+
+.confirm:hover {
     background-color: #2c59d4;
+}
+
+.btn-wrapper {
+    display: block;
+    width: 260px;
+    margin: 0 auto;
+}
+
+.btn-wrapper .btn {
+    margin-left: 5px;
+    display: inline-block;
 }
 
 #images {
